<resources>
    <string name="app_name">Catfish Doctor</string>
    <string name="openDrawer">Drawer has been opened!</string>
    <string name="closeDrawer">Drawer has been closed!</string>
    <string name="navigasi_kategori_1">Menu list</string>
    <string name="menu_pertama">Start Diagnosis</string>
    <string name="menu_kedua">Disease Data</string>
    <string name="menu_ketiga">Symptom Data</string>
    <string name="menu_keempat">Disease History</string>
    <string name="navigasi_kategori_2">Exit</string>
    <string name="menu_keluar">Exit</string>
    <string name="info_aplikasi">Information about Catfish Doctor</string>
    <string name="penjelasan_aplikasi">Catfish Doctor is an Android-based Expert System Application with disease diagnosis function in catfish, this application is made to give information on catfish farmer about disease type, disease cause, way of treatment and prevention way on catfish disease.</string>
    <string name="versi">Catfish Doctor version 1.0</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="dokter_lele">CATFISH DOCTOR</string>
    <string name="desc_slide1">Welcome to the Catfish Doctor app!</string>
    <string name="info">Please select the menu by pressing the upper left corner button on the Main Menu, which consists of noble diagnostic menu, disease data, symptom data and history of disease</string>
    <string name="waning">On the list of catfish diseases can be clicked and will bring up detailed information</string>
    <string name="informasi">INFORMATION</string>
    <string name="perhatian">WARNING</string>
    <string name="finish">Finish</string>
    <string name="toast_1">Start Diagnosis!</string>
    <string name="toast_2">Viewing Disease Data!</string>
    <string name="toast_3">Viewing Symptom Data!</string>
    <string name="toast_4">View the Disease History!</string>
    <string name="toast_5">Close Apps!</string>
    <string name="judul_menu_2">List Type of Catfish Disease</string>
    <string name="judul_menu_3">List of Symptoms of Catfish Disease</string>
    <string name="judul_menu_4">List of Catfish Disease History</string>
    <string name="kosong">Disease history is empty!</string>
    <string name="selesai">Done</string>
    <string name="perkiraan">Maybe you mean the disease below</string>
    <string name="loading">Processing the diagnosis</string>
    <string name="p02">Aeromonas hydrophylla</string>
    <string name="penjelasan02">Fierce catfish killer, enter after fish stress or injured or after infection from other germs</string>
    <string name="gejala02">Bleeding on the skin - Weak - Dark skin - Rough skin - Hard to breathe</string>
    <string name="penyebab_bakteri">Attack of Bacteria</string>
    <string name="pencegahan02">Prevention: Maintaining water and environmental quality, do not make catfish stress and injury, vaccine at the age of 2 weeks / antibody around the age of 6 weeks, the form of immunity through high protein and ideal density</string>
    <string name="pengobatan02">How to treatment: Replace water with fresh and cold fresh water or by giving Terramycin 50 mg / kg of fish / day for 7-10 days or giving Sulphonamid 100 mg / kg fish / day 3-4 days and all mixed with feed</string>
    <string name="p03">Aeromonas punctata</string>
    <string name="gejala03">Weak - Lost appetite - Scalp infection, back body, gills and fins</string>
    <string name="penjelasan03">Disease that attacks the catfish seeds, but also attack the adult catfish but the symptoms do not seem clear</string>
    <string name="pencegahan03">Preventive measures: Maintain water and environmental quality or provide antibiotics and probiotics according to dose</string>
    <string name="pengobatan03">Method of treatment: Replace water with fresh and cool fresh water or by immersion in Oxytetracycline HCI 25-30 mg / kg fish / day for 7-10 days or give Sulfamerazine 100-200 mg / kg of feed for 1-3 days</string>
    <string name="p08">Bintik Putih (White spot)</string>
    <string name="penjelasan08">Diseases caused by protozoa of the Lchthyphyirius multifillis type. This disease is commonly found in freshwater fish, but in many catfish attack on catfish seeds</string>
    <string name="penyebab_parasit">Attack of the Parasite</string>
    <string name="gejala08">Weak - Often appear to the surface - White spots appear on the fins and gills - Fish rubs his body against a hard object</string>
    <string name="pencegahan08">Preventive measures: Maintain water and environmental quality and adjust its accurate density</string>
    <string name="pengobatan08">Method of treatment: Replace water with fresh and cool fresh water, separate the sick catfish and then satisfy for 2-3 days or infected fish soaked into Formalin 25 / m3 mixture with Malachyte green oxalate (MGO) 0.1 g / m3 for 12 - 24 hours, then given fresh water</string>
    <string name="p04">Columnaris</string>
    <string name="penjelasan04">Attack on catfish at a hot temperature of about 20 degrees Celsius</string>
    <string name="gejala04">Bleeding in the flesh - Ulcers on the skin - Bleeding on the skin</string>
    <string name="pencegahan04">Preventive measures: Maintain water and environmental quality or provide antibiotics and probiotics according to dose</string>
    <string name="pengobatan04">Method of treatment: Replace water with fresh and cool fresh water or by immersion into Oxytetracycline solution 10 ppm for 30 minutes or give Sulfisoxzole 100 mg / kg per day for 10-20 days</string>
    <string name="p05">Edwardsiella</string>
    <string name="penjelasan05">Diseases that attack on fresh fish and sea fish with optimal temperature for its development around 35 degrees centigrade</string>
    <string name="gejala05">Dark skin, Ulcers on the skin - Bleeding on the skin - Side eyes and body protruding - Small wound on the skin</string>
    <string name="pencegahan05">Preventive measures: Maintain the quality of water and the environment or by destroying diseased fish by being buried or burned</string>
    <string name="pengobatan05">How to treatment: Replace water with fresh and cool fresh water or by sowing Sulphanamide 100-200 mg / kg per day for 4 consecutive days at the start of the pool</string>
    <string name="p01">Pseudomonas hydrophylla</string>
    <string name="penjelasan01">Diseases that attack catfish all sizes, almost similar to Aeromonas hydrophylla and commonly found in soil, water and rotten fish</string>
    <string name="gejala01">Ulcers on the skin - Bleeding on the skin - Weak - Skinny - Loss of appetite</string>
    <string name="pencegahan01">Preventive measures: Maintaining water and environmental quality, Providing Vaccine at 2 weeks / antibody around 6 weeks, reducing stocking density and quarantining catfish disease</string>
    <string name="pengobatan01">Method of treatment: Replace water with fresh and cool fresh water or by immersion in Oxytetracycline HCI 25-30 mg / kg fish / day for 7-10 days</string>
    <string name="p06">Tuberculosis</string>
    <string name="penjelasan06">The disease is caused by the bacterium Mycobacterium fortoitum that attacks all ages in catfish</string>
    <string name="gejala06">Dark skin - Stomach swell - Liver spots</string>
    <string name="pencegahan06">Preventive measures: Maintain water and environmental quality or provide antibiotics and probiotics according to dose</string>
    <string name="pengobatan06">How to treat: Replace water with fresh and cold fresh water, quarantine catfish disease or treat with Oxitetracyclin solution mixed into 0.5 mg / kg feed</string>
    <string name="p07">White mushrooms</string>
    <string name="gejala07">Head, gill cover and fins overgrown with fine threads like cotton - In eggs covered with yarn like cotton</string>
    <string name="penjelasan07">The disease is caused by the fungus Saprolegnia, this disease attacks on fish and its eggs, grows Saprohyte on wounds in cold places</string>
    <string name="serangan_jamur">Attack of the Mushroom</string>
    <string name="pencegahan07">Preventive measures: Maintain the quality of water and the environment or provide careful handling so that catfish do not hurt or give antibiotics periodically</string>
    <string name="pengobatan07">Method of treatment: Fish soaked in a solution of Malachyte green oxalate (MGO) 2.5-3 g / m3 water for 30 minutes and eggs soaked into 0.1-0.2 ppm Malachyte green oxalate (MGO) solution for 1 hour or 5-10 ppm for 15 minutes</string>
    <string name="p09">Itchy</string>
    <string name="penjelasan09">This disease is caused by the protozoa of Trichodina sp. which attacks the catfish seeds on the skin and fins</string>
    <string name="gejala09">Weak - Skinny - Fish rubs itself against hard objects</string>
    <string name="pencegahan09">Precautions: Maintain water quality and the environment or reduce its density</string>
    <string name="pengobatan09">Method of treatment: Replace water with fresh and cool fresh water or by immersion in Formalin 150-200 ml / m3 solution for 15 minutes or immersion into 0.1 g / m3 Malachyte green oxalate (MGO) solution for 12-24 hours</string>
    <string name="p10">Trematoda</string>
    <string name="penjelasan10">Diseases caused by Gyrodactylus sp. and Dactylogyrus sp. which attacks the high density catfish seeds</string>
    <string name="gejala10">Dark skin - Skinny - Fish rubs itself against hard objects - Fins fall out</string>
    <string name="pencegahan10">Preventive measures: Maintain water and environmental quality, decrease water levels and reduce fish density</string>
    <string name="pengobatan10">Method of treatment: Replace water with fresh and cool fresh water or by immersion in a 250 cc / m3 formalin solution of water for 15 minutes or immerse in Methyline blue 3 g / m3 water solution for 24 hours</string>
    <string name="p11">Lernea sp.</string>
    <string name="penjelasan11">Diseases that attack fish from seed to mother by sucking liquid food from the hosts body</string>
    <string name="gejala11">There are protozoa that stick and thrust themselves on the gill cover, fins or eyes - The gill cover, fins or eyes are injured</string>
    <string name="pencegahan11">Preventive measures: Maintain water quality and the environment, provide antibiotics and filter water entering the pond</string>
    <string name="pengobatan11">Method of treatment: Replace water with fresh and cool fresh water or by immersion into a salt (NaCl) solution of 20 g / l for 5 minutes</string>
    <string name="benar">True</string>
    <string name="tidak">False</string>
    <string name="g01">Ulcers on the skin</string>
    <string name="g02">Bleeding on the skin</string>
    <string name="g03">Weak</string>
    <string name="g04">Thin</string>
    <string name="g05">Appetite is gone</string>
    <string name="g06">Dark skin</string>
    <string name="g07">Rough skin</string>
    <string name="g08">Hard to breathe</string>
    <string name="g09">Scalp, back, gill and fins infections</string>
    <string name="g10">Bleeding in meat</string>
    <string name="g11">The eyes and the side body stand out</string>
    <string name="g12">Small cuts on the skin, then extends to the flesh</string>
    <string name="g13">Abdomen swell</string>
    <string name="g14">Liver spots</string>
    <string name="g15">Head, gill cover and fins overgrown with fine threads such as cotton</string>
    <string name="g16">In the eggs covered with yarn like cotton</string>
    <string name="g17">Often appear to the surface</string>
    <string name="g18">White spots appear on the fins and gills</string>
    <string name="g19">Fish rubs his body against a hard object</string>
    <string name="g20">Fins fall out</string>
    <string name="g21">There are protozoa that stick and thrust themselves on the gill cover, fins or eyes</string>
</resources>